--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             </header>
             <div class="container">
                 <div class="inner">
-                    <div class="mod-word">
+                    <section class="mod-word">
                         <div class="bd">
                             <blockquote>
                                 <p>在互联网的浩瀚代码流里，我们大多是穿行其间的行者 —— 敲过的每一行代码是脚下的路，调试过的每一个 Bug 是途中的景，而那些未被命名的需求与待实现的功能，则是前方隐约的光。我的网名与域名都叫 “passer-by”，初看是 “路人” 的简单释义，细想却藏着我作为程序员对这个行业、对自我的一点小注解。</p>
@@ -61,7 +61,7 @@
                                 <p class="from">出处：国内著名AI工具 - 豆包</p>
                             </blockquote>
                         </div>
-                    </div>
+                    </section>
                     <section class="mod-panel">
                         <div class="hd">
                             <h3 class="title">关于我&本站</h3>
