--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 </div>
             </header>
             <div class="container">
-                <div class="mod-person">
-                    <div class="inner">
+                <div class="inner">
+                    <section class="mod-person">
                         <div class="bd">
                             <div class="avatar">
                                 <img src="./static/image/index/avatar.jpg" loading="lazy" width="200" height="200" alt="头像">
@@ -82,10 +82,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="module mod-about">
-                    <div class="inner">
+                    </section>
+                    <section class="module mod-about">
                         <div class="bd">
                             <div class="picture-container">
                                 <div class="slogan">
@@ -125,10 +123,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="module mod-github">
-                    <div class="inner">
+                    </section>
+                    <section class="module mod-github">
                         <div class="bd">
                             <div class="summary-container">
                                 <p class="title">用代码记录每一个迸发的灵感<br>开源项目就是我想法的演练场</p>
@@ -146,10 +142,8 @@
                                 <img class="cat" src="./static/image/index/cat.png" width="126"/>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="module mod-project">
-                    <div class="inner">
+                    </section>
+                    <section class="module mod-project">
                         <div class="hd">
                             <h3 class="title"><a href="/project.html" target="_blank">我的项目</a></h3>
                             <p class="subtitle">My Projects</p>
@@ -236,7 +230,7 @@
                         <div class="ft">
                             <a class="btn btn-blue" href="/project.html" target="_blank">查看更多项目</a>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
             <footer>
