--- a/photograph.html
+++ b/photograph.html
@@ -53,7 +53,7 @@
             </header>
             <div class="container">
                 <div class="inner">
-                    <div class="mod-photo">
+                    <section class="mod-photo">
                         <div class="hd">
                             <h3 class="title">我的摄影</h3>
                             <p class="subtitle">My Photograph</p>
@@ -84,7 +84,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
             <footer>
