--- a/project.html
+++ b/project.html
@@ -53,13 +53,13 @@
             </header>
             <div class="container">
                 <div class="inner">
-                    <div class="mod-project">
+                    <section class="mod-project">
                         <div class="hd">
                             <h3 class="title">我的项目</h3>
                             <p class="subtitle">My Projects</p>
                         </div>
                         <div class="bd">
-                            <section>
+                            <div class="group">
                                 <h3>算法</h3>
                                 <div class="list">
                                     <div class="J_link item">
@@ -78,8 +78,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </section>
-                            <section>
+                            </div>
+                            <div class="group">
                                 <h3>网页组件</h3>
                                 <div class="list">
                                     <div class="J_link item">
@@ -131,8 +131,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </section>
-                            <section>
+                            </div>
+                            <div class="group">
                                 <h3>工具库</h3>
                                 <div class="list">
                                     <div class="J_link item">
@@ -208,8 +208,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </section>
-                            <section>
+                            </div>
+                            <div class="group">
                                 <h3>游戏</h3>
                                 <div class="list">
                                     <div class="J_link item">
@@ -249,8 +249,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </section>
-                            <section>
+                            </div>
+                            <div class="group">
                                 <h3>站点</h3>
                                 <div class="list">
                                     <div class="J_link item">
@@ -314,8 +314,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </section>
-                            <section>
+                            </div>
+                            <div class="group">
                                 <h3>数据</h3>
                                 <div class="list">
                                     <div class="J_link item">
@@ -331,8 +331,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </section>
-                            <section>
+                            </div>
+                            <div class="group">
                                 <h3>其他</h3>
                                 <ul>
                                     <li>
@@ -378,9 +378,9 @@
                                         </div>
                                     </li>
                                 </ul>
-                            </section>
+                            </div>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
             <footer>
