--- a/writing.html
+++ b/writing.html
@@ -53,13 +53,13 @@
             </header>
             <div class="container">
                 <div class="inner">
-                    <div class="mod-project">
+                    <section class="mod-project">
                         <div class="hd">
                             <h3 class="title">我的文字</h3>
                             <p class="subtitle">My Writing</p>
                         </div>
                         <div class="bd">
-                            <section>
+                            <div class="group">
                                 <h3>笔记</h3>
                                 <ul>
                                     <li>
@@ -69,8 +69,8 @@
                                         </div>
                                     </li>
                                 </ul>
-                            </section>
-                            <section>
+                            </div>
+                            <div class="group">
                                 <h3>查询文档</h3>
                                 <ul>
                                     <li>
@@ -80,9 +80,9 @@
                                         </div>
                                     </li>
                                 </ul>
-                            </section>
+                            </div>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
             <footer>
