--- a/comment.html
+++ b/comment.html
@@ -53,7 +53,7 @@
             </header>
             <div class="container">
                 <div class="inner">
-                    <div class="mod-comment">
+                    <section class="mod-comment">
                         <div class="hd">
                             <span class="title">在<strong>Github</strong>上与我留言：</span>
                             <a class="btn" href="https://github.com/mumuy/mumuy.github.io/issues/new" target="_blank">发起留言</a>
@@ -63,7 +63,7 @@
                                 <li><div class="c-bd"><img src="./static/image/public/loading.gif" width="32" height="32"/></div></li>
                             </ul>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
             <footer>
