--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         <link rel="canonical" href="http://passser-by.com/about.html">
         <link rel="stylesheet" href="./static/style/common.css">
         <link rel="stylesheet" href="./static/style/about.css">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5322941251486103" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="wrapper">
