--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
                 <button id="output">测试</button>
             </div>
             <div class="input-wrapper">
-                <input type="datetime-local" name="date" value="2025-02-01"/>
+                <input type="date" name="date" value="2025-02-01"/>
                 <button id="output2">测试</button>
             </div>
             <div class="input-wrapper">
