--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <p id="test">测试</p>
     <script type="text/javascript">
         navigator.userAgentData.getHighEntropyValues(["platformVersion"]).then(function(t){
-            document.getElementsById('test').innerHTML = JSON.stringify(t);
+            document.getElementById('test').innerHTML = JSON.stringify(t);
         });
     </script>
 </body>
