--- a/project.html
+++ b/project.html
@@ -120,13 +120,25 @@
                                     </div>
                                     <div class="J_link item">
                                         <div class="c-hd">
-                                            <h4 class="title">行政区划选择组件</h4>
-                                            <p class="subtitle">中国省市区三级行政区划选</p>
+                                            <h4 class="title">行政区划选择器</h4>
+                                            <p class="subtitle">中国省市区三级行政区划选择</p>
                                         </div>
                                         <div class="c-bd">
                                             <div class="cover">
                                                 <a class="btn" href="/widget-region/" target="_blank">查看项目</a>
                                                 <img src="./static/image/index/project/widget-region.png" loading="lazy" width="320" height="160">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="J_link item">
+                                        <div class="c-hd">
+                                            <h4 class="title">日期时间选择器</h4>
+                                            <p class="subtitle">自定义日期时间选择</p>
+                                        </div>
+                                        <div class="c-bd">
+                                            <div class="cover">
+                                                <a class="btn" href="/widget-datetime/" target="_blank">查看项目</a>
+                                                <img src="./static/image/index/project/widget-datetime.png" loading="lazy" width="320" height="160">
                                             </div>
                                         </div>
                                     </div>
